Manage margin to fix overflow.

--- a/static/css/project.css
+++ b/static/css/project.css
@@ -61,10 +61,10 @@ li::before {
 }
 
 #scrollToTopBtn {
-    bottom: 60px;
+    bottom: 40px;
     cursor: pointer;
     position: fixed;
-    right: 60px;
+    right: 40px;
     opacity: 0;
 }
 
@@ -77,6 +77,7 @@ li::before {
 #nav-mobile {
     top: 60px;
 }
+
 @media only screen and (max-width: 768px) {
     .icon-nav {
         position: absolute;
